--- a/public/bower.json
+++ b/public/bower.json
@@ -17,7 +17,13 @@
     "polymer": "Polymer/polymer#2.0-preview",
     "paper-card": "PolymerElements/paper-card#2.0-preview",
     "iron-icons": "PolymerElements/iron-icons#2.0-preview",
-    "paper-badge": "PolymerElements/paper-badge#2.0-preview"
+    "paper-badge": "PolymerElements/paper-badge#2.0-preview",
+    "paper-button": "PolymerElements/paper-button#2.0-preview",
+    "paper-progress": "PolymerElements/paper-progress#2.0-preview",
+    "platinum-sw": "PolymerElements/platinum-sw#2.0-preview",
+    "polymerfire": "firebase/polymerfire#2.0-preview",
+    "paper-input": "PolymerElements/paper-input#2.0-preview",
+    "paper-fab": "PolymerElements/paper-fab#2.0-preview"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
@@ -30,6 +36,13 @@
     "iron-icon": "2.0-preview",
     "iron-meta": "2.0-preview",
     "iron-iconset-svg": "2.0-preview",
-    "iron-resizable-behavior": "2.0-preview"
+    "iron-resizable-behavior": "2.0-preview",
+    "paper-behaviors": "2.0-preview",
+    "iron-behaviors": "2.0-preview",
+    "iron-a11y-keys-behavior": "2.0-preview",
+    "iron-checked-element-behavior": "2.0-preview",
+    "iron-validatable-behavior": "2.0-preview",
+    "iron-form-element-behavior": "2.0-preview",
+    "paper-ripple": "2.0-preview"
   }
 }
